[package]
name = "Yggdrasil"
version = "0.1.0"
edition = "2021"
authors = ["Manav Kumar Dubey <dmanavkumar24@gmail.com>"]
description = "A real-time chat server using WebSockets"
license = "MIT"
repository = "https://github.com/manavkdubey/yggdrasil"


[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
dashmap = "6.1.0"
env_logger = "0.11.7"
flume = "0.11.1"
log = "0.4.26"
once_cell = "1.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.1"
uuid = { version = "1.16.0", features = ["v4"] }
